--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,34 @@
 <div class="container">
 	<div class="tabbable custom-tabs shadow tabs-animated tabs-left">
 	    <ul class="nav nav-tabs">
-	        <li class="active"><a href="#tab1" data-toggle="tab"><i class="icon-arrow-up"></i><div>Carga tus<br>archivos</div></a></li>
-	        <li><a href="#tab2" data-toggle="tab"><i class="icon-globe"></i><div>Escoge<br>un lugar</div></a></li>
-	        <li><a href="#tab2" data-toggle="tab"><i class="icon-arrow-up"></i><div>Confirma<br>tu pedido</div></a></li>
+	        <li class="active">
+	        	<a href="#" class="tab-logo-holder"><%= image_tag "logo.png", size:"150x88" %></a>
+	        	
+	        </li>
+	        <li class="active">
+	        	<a href="#tab1" data-toggle="tab">
+	        		<div class="upload-icon"></div>
+	        		<div class="tab-text">Carga tus<br>archivos</div>	
+	        	</a>	
+	        </li>
+	        <li>
+	        	<a href="#tab2" data-toggle="tab">
+	        		<div class="globe-icon"></div>
+	        		<div class="tab-text">Escoge<br>un lugar</div>
+	        	</a>
+	        </li>
+	        <li>
+	        	<a href="#tab2" data-toggle="tab">
+	        		<div class="check-icon"></div>
+	        		<div class="tab-text">Confirma<br>tu pedido</div>
+	        	</a>
+	        </li>
+	        <li>
+	        	<a href="#tab2" data-toggle="tab">
+	        		<div class="archive-icon"></div>
+	        		<div class="tab-text">Historial de<br>impresiones</div>
+	        	</a>
+	        </li>
 	    </ul>
 	    <div class="tab-content">
 	        <div id="tab1" class="tab-pane active">
@@ -14,7 +39,7 @@
 	        		</br>
 	        		<a href='#' class="btn btn-large btn-primary">Cargar archivo</a>
 	        	</div>
-	        </div>
+	    	</div>
 	        <div id="tab2" class="tab-pane">...Tab2-Content...</div>
 	    </div>
 	</div>
